# nk

./: CMakeLists.txt  polynomial.cpp  test.cpp
example/: CMakeLists.txt
src/: dbg.h  polynomial.cpp  polynomial.h
